--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ android {
 
 dependencies {
     def lifecycle_version = "2.2.0"
-
     def nav_version = "2.3.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -70,4 +69,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+//    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+//    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
 }
